--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
 		<version>1.7.21</version>
 	    <scope>test</scope>
 	</dependency>
+	<dependency>
+    <groupId>org.hamcrest</groupId>
+	    <artifactId>java-hamcrest</artifactId>
+	    <version>2.0.0.0</version>
+	    <scope>test</scope>
+	</dependency>
   </dependencies>
 
   <build>
