--- a/pom.xml
+++ b/pom.xml
@@ -104,8 +104,7 @@
 		            <phase>validate</phase>
 		            <configuration>
 		                <configLocation>google_checks.xml</configLocation>
-		                <suppressionsLocation>suppressions.xml
-		                </suppressionsLocation>
+		                <suppressionsLocation>suppressions.xml</suppressionsLocation>
 		                <encoding>UTF-8</encoding>
 		                <failsOnError>true</failsOnError>
 		                <consoleOutput>true</consoleOutput>
@@ -117,6 +116,22 @@
 		            </goals>
 		        </execution>
 		    </executions>
+		</plugin>
+		<plugin>
+		  <groupId>com.github.spotbugs</groupId>
+		  <artifactId>spotbugs-maven-plugin</artifactId>
+		  <version>4.1.3</version>
+		  <configuration>
+		  	<excludeFilterFile>spotbugs_ignore.xml</excludeFilterFile>
+		  </configuration>
+		  <dependencies>
+		    <!-- overwrite dependency on spotbugs if you want to specify the version of spotbugs -->
+		    <dependency>
+		      <groupId>com.github.spotbugs</groupId>
+		      <artifactId>spotbugs</artifactId>
+		      <version>4.2.0</version>
+		    </dependency>
+		  </dependencies>
 		</plugin>
       </plugins>
     </pluginManagement>
