--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
 	    <version>2.0.0.0</version>
 	    <scope>test</scope>
 	</dependency>
+	<dependency>
+	    <groupId>fm.void.jetm</groupId>
+	    <artifactId>jetm</artifactId>
+	    <version>1.2.3</version>
+	</dependency>
   </dependencies>
 
   <build>
