--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,18 @@
 	    <artifactId>jetm</artifactId>
 	    <version>1.2.3</version>
 	</dependency>
+	<dependency>
+    <groupId>com.tngtech.archunit</groupId>
+	    <artifactId>archunit</artifactId>
+	    <version>0.15.0</version>
+	    <scope>test</scope>
+	</dependency>
+	<dependency>
+    <groupId>com.tngtech.archunit</groupId>
+	    <artifactId>archunit-junit</artifactId>
+	    <version>0.8.3</version>
+	    <scope>test</scope>
+	</dependency>
   </dependencies>
 
   <build>
